# supervised-learning

./: .gitignore  LICENSE  README.md  environment.yml  keybindings.json  list_tree.cmd  pyproject.toml  tree.txt
.github/: copilot-instructions.md
assets/: architecture.py  import_base64.py  test_diagram.py
docs/: Notebook Context  README.md  checklist.md  notebooks
notebooks/: 01_landing_page_cv.ipynb  02_supervised_learning_systems.ipynb  03_cost_curve_and_gradient_intuition.ipynb  04_cost_curve_and_gradient_intuition_part_2.ipynb  architecture.py
src/circular_system_dashboard/: README.md  animation_utils.py  circular_map.py  dashboard_overlays.py  requirements.txt
utils/: metrics.py  viz.py
