[project]
name = "supervised-systems"
version = "0.1.0"
description = ""
authors = [
    {name = "Deon Prinsloo",email = "Deon66@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.3.0,<3.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "plotly (>=6.2.0,<7.0.0)",
    "numpy (>=2.3.1,<3.0.0)",
    "ipywidgets (>=8.1.7,<9.0.0)",
    "nbformat (>=5.10.4,<6.0.0)",
    "ipython (>=9.3.0,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
