[project]
name = "supervised-systems"
version = "0.1.0"
description = ""
authors = [
    {name = "Deon Prinsloo", email = "Deon66@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "pandas>=2.3.0,<3.0.0",
    "scikit-learn>=1.7.0,<2.0.0",
    "plotly>=6.2.0,<7.0.0",
    "numpy>=2.3.1,<3.0.0",
    "ipywidgets>=8.1.7,<9.0.0",
    "nbformat>=5.10.4,<6.0.0",
    "ipython>=9.3.0,<10.0.0",
    "notebook>=7.4.3,<8.0.0",
    "ipykernel>=6.29.5,<7.0.0",
    "graphviz>=0.20.3,<1.0.0",
    "diagrams>=0.24.4,<1.0.0",
    "pillow>=10.3.0,<11.0.0",
    "matplotlib>=3.8.4,<4.0.0"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"